# Fitnexa

./: README.md  pubspec.yaml
android/app/: build.gradle
components/amap_flutter_location/: pubspec.yaml
components/amap_map_fluttify/: README.md  pubspec.yaml
components/creek_alexa_plugin/: README.md  pubspec.yaml
components/creek_notification_listener/: README.md  pubspec.yaml
components/creekbase/: .gitignore  README.md  pubspec.yaml
components/creekbluemanage/: README.md  pubspec.yaml
components/creekbluemanage/sbc/src/: CMakeLists.txt  sbc.c  sbc.h
components/creekbusiness/: .gitignore  README.md  pubspec.yaml
components/creekchart/: .gitignore  README.md  pubspec.yaml
components/creekdial/: pubspec.yaml
components/creekgetx/: .gitignore
components/creekhealth/: .gitignore  README.md  pubspec.yaml
components/creekhttp/: .gitignore  pubspec.yaml
components/creekmap/: README.md  pubspec.yaml
components/creektool/: README.md  pubspec.yaml
components/creekwidgets/: .gitignore  README.md  pubspec.yaml
components/fl_chart/: .gitignore
components/flutter_blue_plus/: pubspec.yaml
components/lz4/: .metadata  README.md  ffigen.yaml  pubspec.yaml
components/lz4/src/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: app_export.dart
lib/routes/: app_routes.dart
lib/theme/: app_decoration.dart  custom_text_style.dart  theme_helper.dart
lib/widgets/: custom_checkbox_button.dart  custom_elevated_button.dart  custom_icon_button.dart  (+4 more)
test/: widget_test.dart
(+1385 files in other folders)
